changed old recipe to example one

--- a/detail.html
+++ b/detail.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="recipes.css">
-  <title>Easy Chana Saag - Veggie Recipes</title>
+  <title>Vegetarian Tacos - Scrumptious Recipes</title>
 </head>
 <body>
   <header>
@@ -14,8 +14,8 @@
     </nav>
   </header>
   <main>
-    <h1>Easy Chana Saag</h1>
-    <img src="chana-saag.jpeg" alt="Chana Saag">
+    <h1>Vegetarian Tacos</h1>
+    <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
     <div>4.3 stars</div>
     <h2>Ingredients</h2>
     <table>
@@ -25,80 +25,46 @@
       </thead>
       <tbody>
         <tr>
-          <td>1 tbs</td>
-          <td>ghee (vegetable oil for vegan)</td>
+          <td>1 cup</td>
+          <td>Green beans</td>
         </tr>
         <tr>
-          <td>1</td>
-          <td>yellow onion</td>
+          <td>3 ears</td>
+          <td>Fresh corn</td>
         </tr>
         <tr>
-          <td>1 tsp</td>
-          <td>salt</td>
+          <td>2 cups</td>
+          <td>Tomatillo salsa</td>
         </tr>
         <tr>
-          <td>1 tsp</td>
-          <td>ginger (grated)</td>
+          <td>8</td>
+          <td>corn tortillas</td>
         </tr>
         <tr>
-          <td>2 cloves</td>
-          <td>garlic</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>tomato (diced)</td>
-        </tr>
-        <tr>
-          <td>1/2 tsp</td>
-          <td>ground tumeric</td>
-        </tr>
-        <tr>
-          <td>1 tsp</td>
-          <td>paprika</td>
-        </tr>
-        <tr>
-          <td>1 tsp</td>
-          <td>ground cumin</td>
-        </tr>
-        <tr>
-          <td>1 can</td>
-          <td>chickpeas (rinsed and drained)</td>
-        </tr>
-        <tr>
-          <td>4 cups</td>
-          <td>fresh baby spinach (rough choppped)</td>
-        </tr>
-        <tr>
-          <td>1/2 tsp</td>
-          <td>garma masala</td>
-        </tr>
-        <tr>
-          <td>1/2 tsp</td>
-          <td>aamchoor powder</td>
+          <td>0.5 cups</td>
+          <td>Cotija cheese</td>
         </tr>
       </tbody>
     </table>
     <h2>Steps</h2>
     <ol>
       <li>
-        In a medium sized pot, add ghee and when it’s sizzling hot,
-        toss in the chopped onions and salt and saute for 5 to 7 minutes
-        or until they are translucent. Cover the pot to speed up the process.
+        Blanch the green beans
       </li>
       <li>
-        Next add the ginger and garlic, and sauté for additional 2 to 3 minutes as onions continue to brown.
+        Grill the green beans and the ears of corn
       </li>
       <li>
-        Add the chopped tomato, turmeric, paprika and ground cumin.
-        Stir well and cook covered for 2 to 3 minutes or just until the tomatoes start to soften.
-        Add half a cup of warm water, lower the heat to medium and let the spices infuse the tomato for another 2 to 3 minutes.
+        Chop the green beans
       </li>
       <li>
-        Stir in the the chickpeas and cook for another 2 to 3 minutes as the chickpeas are heated through.
-        Add the spinach and stir into the masala and cook just until the spinach wilts. Turn the heat off.
+        Slice the corn off the cob
       </li>
       <li>
-        To finish sprinkle the garam masala and amchoor powder or lemon juice all over and serve hot with naan or rice.
+        Grill tortillas
+      </li>
+      <li>
+        Assemble the tacos with veggies, salsa and cheese
       </li>
     </ol>
   </main>
