--- a/list.html
+++ b/list.html
@@ -14,13 +14,13 @@
     </nav>
   </header>
   <main>
-    <h1>Veggie Recipes</h1>
+    <h1>Scrumptious Recipes</h1>
     <h2>All the food that's fit to eat</h2>
     <div>
       <h3>
-        <a href="detail.html">Easy Chana Saag</a>
+        <a href="detail.html">Vegetarian Tacos</a>
       </h3>
-      <img src="chana-saag.jpeg" alt="Chana Saag">
+      <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
       <div>4.3 stars</div>
     </div>
   </main>
