added some css styles with html examples

--- a/detail.html
+++ b/detail.html
@@ -69,7 +69,7 @@
     </ol>
   </main>
   <footer>
-    <p>Made with love by Veggie Recipes</p>
+    <p>Made with love by Scrumptious Recipes</p>
   </footer>
 </body>
 </html>
