--- a/list.html
+++ b/list.html
@@ -16,16 +16,47 @@
   <main>
     <h1>Scrumptious Recipes</h1>
     <h2>All the food that's fit to eat</h2>
-    <div>
-      <h3>
-        <a href="detail.html">Vegetarian Tacos</a>
-      </h3>
-      <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
-      <div>4.3 stars</div>
-    </div>
+    <div class="grid">
+      <div>
+        <h3>
+          <a href="detail.html" class="recipe-link">Vegetarian Tacos</a>
+        </h3>
+        <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
+        <div>4.3 stars</div>
+      </div>
+      <div>
+        <h3>
+          <a href="detail.html" class="recipe-link">Vegetarian Tacos</a>
+        </h3>
+        <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
+        <div>4.3 stars</div>
+      </div>
+      <div>
+        <h3>
+          <a href="detail.html" class="recipe-link">Vegetarian Tacos</a>
+        </h3>
+        <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
+        <div>4.3 stars</div>
+      </div>
+      <div>
+        <h3>
+          <a href="detail.html" class="recipe-link">Vegetarian Tacos</a>
+        </h3>
+        <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
+        <div>4.3 stars</div>
+      </div>
+      <div>
+        <h3>
+          <a href="detail.html" class="recipe-link">Vegetarian Tacos</a>
+        </h3>
+        <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
+        <div>4.3 stars</div>
+      </div>
+      </div>
+  </div>
   </main>
   <footer>
-    <p>Made with love by Veggie Recipes</p>
+    <p>Made with love by Scrumptious Recipes</p>
   </footer>
 </body>
 </html>
