--- a/detail.html
+++ b/detail.html
@@ -26,19 +26,19 @@
       <tbody>
         <tr>
           <td>1 cup</td>
-          <td>Green beans</td>
+          <td>Green Beans</td>
         </tr>
         <tr>
           <td>3 ears</td>
-          <td>Fresh corn</td>
+          <td>Fresh Corn</td>
         </tr>
         <tr>
           <td>2 cups</td>
-          <td>Tomatillo salsa</td>
+          <td>Tomatillo Salsa</td>
         </tr>
         <tr>
           <td>8</td>
-          <td>corn tortillas</td>
+          <td>Corn Tortillas</td>
         </tr>
         <tr>
           <td>0.5 cups</td>
