--- a/list.html
+++ b/list.html
@@ -52,6 +52,20 @@
         <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
         <div>4.3 stars</div>
       </div>
+      <div>
+        <h3>
+          <a href="detail.html" class="recipe-link">Vegetarian Tacos</a>
+        </h3>
+        <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
+        <div>4.3 stars</div>
+      </div>
+      <div>
+        <h3>
+          <a href="detail.html" class="recipe-link">Vegetarian Tacos</a>
+        </h3>
+        <img src="veggie-tacos.jpg" alt="Vegetarian Tacos">
+        <div>4.3 stars</div>
+      </div>
       </div>
   </div>
   </main>
